fix regression in sizing of the background image for the root element.

this regressed in r855521, as I didn't quite understood all the subtleties
of the background size for the root case.

BUG: 187285

svn path=/trunk/KDE/kdelibs/; revision=944739